New outline for the onboarding chapter

--- a/onboarding.adoc
+++ b/onboarding.adoc
@@ -3,325 +3,28 @@ Authors: Karsten Wade <kwade@redhat.com>, Josh Berkus <jberkus@redhat.com>, Bria
 Updated: 2020-03-30
 
 == Introduction
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-Suspendisse viverra id leo et lacinia.
-Maecenas convallis lacinia diam, et lobortis quam tincidunt hendrerit.
-Mauris eget nulla at dolor ullamcorper lacinia.
-Quisque nisl eros, hendrerit et erat sit amet, feugiat venenatis sapien.
-Duis a dapibus mauris.
-Aliquam tempus ornare metus nec accumsan.
-Nulla et dui arcu.
-Proin hendrerit nibh velit, quis aliquet est interdum sit amet.
-Pellentesque vitae turpis tempor ex pulvinar sodales ut vitae arcu.
-Nunc commodo dolor quis porttitor imperdiet.
-Ut imperdiet egestas diam nec pretium.
-Vivamus non ligula viverra, egestas dolor consequat, pretium nisi.
-Nulla non leo pellentesque.
 
-== Building a clear contributor pathway
+In many ways, onboarding at a new open source community is a lot like onboarding for a new job. You need to get familiar with new people, new tools, new processes, etc. so that you feel comfortable in your new settings and can start contributing. However, there are a number of ways that onboarding in open source communities can present different challenges. 
 
-Nearly everyone who is working on an open source project likely has motives beyond helping others.
-It can be as straightforward as a personal "I need something to help me do X, and I am willing to work with others to help me achieve that goal."
-Or perhaps a company is heavily using the project's software and the contributor needs to be active as part of their job.
+The first challenge in open source is that you work in an asynchronous and remote environment. One of the nice perks of traditional office environment is that you  are close to your co-workers and managers for face to face interactions and you can easily reach out to them for quick questions. 
 
-Regardless of how a person comes to the open source table, it's very possible that they will find themselves wanting to do more.
-Again, this could be to help their company make a bigger impact in the project, or something desired out of a sense of personal gain.
-As community organizers, it's very important to recognize these needs and foster them, lest you lose a potentially fantastic contributor to your project.
+* Imposter syndrome
+* Each open source community is different
 
-One path projects can provide to those who want to do more is enabling contributor/commiter permissions, ultimately with an eye towards giving that person more say into the direction of the project through the contributions of others as a maintainer.
-Setting up a path to maintainership can be very important as a community onboarding best practice, because it says to contributors, this is a goal you can achieve in our community, should you wish to go in this direction.
+== Tools for onboarding
 
-A clear maintainer path is a mutual benefit to the other maintainers of the project as well, since a broader distribution of maintainer tasks can help balance workload, reduce the chance of burnout, and introduce greater diversity into the decision-making process.
-It's also important to the health of a project long-term.
-A project that isn't growing new contributors, committers and maintainers is in danger when its existing maintainers and committers find themselves too busy, changing jobs, or otherwise unable to drive the project with the same commitment they have today.
+* Landing page
+* Orientation events for newcomers
+* Communication channels
+* Issues for new contributors
 
-So how does one create a maintainer path?
+== People to help with onboarding
 
-The paths are, like most things in open source, hugely varied.
-Some communities take an aggressive  approach and give commit access to anyone who contributes to the project.
-Others follow a well-documented, intensive process that rates potential maintainers with multiple criteria  and vets their identities before awarding maintainer status.
-Everyone else is somewhere in-between.
+* Coaches/mentors
+* A team/working group focused on onboarding.
 
-Clearly there are a lot of options from which a community can choose to set up a maintainer path.
-But the core decision you must make is this: what is the level of trust you and your community need to have to accept a new maintainer?
-If you are a small project just getting started, a come-one-come-all approach to maintainership may work very well.
-If your project is more mature, you may want to put a more rigorous process in place. Such a process can help take care of two issues:
+== Mentorship
 
-* Gives community members a consistent path to maintainership
-* Deters the "why them and not me?" conversations
 
-There is no perfect path to maintainership, but there are some basic guidelines that you may want to follow as you consider what path to set up.
 
-*Number of contributions.*
-If a potential maintainer has made some really amazing contributions, but they have only recently arrived in the community, you may want to hold off offering them a maintainership.
-Is their work consistently good?
-Do they follow the contributor guidelines you might have for your project?
-Quantity isn't the only metric to use, but a baseline of contributions will give you and your project team a better idea of how consistent this person is.
-
-*Introduce review process.*
-Potential maintainers should have a chance to participate in content review before they achieve maintainer status.
-They may create the best content under the Sun, but if they don't have a knack for thorough and constructive reviews, they may not be a good maintainer.
-Project leaders should try to afford every opportunity to give solid contributors a chance to review others' content, to see if they like doing it and have a talent for it.
-
-*Length of time.*
-Some people might not be as prolific contributors as others, but that should not deter them from being a potential maintainer.
-In that case, noting the amount of time they have spent with the project is also a good indicator.
-Again, this metric should be used in conjunction with the others, not as a sole determinant.
-
-*Communication skills.*
-This measurement is harder to quantify than the others, but you should examine it nonetheless.
-Effective communication is a good skill for anyone to have, but it is especially true for a maintainer.
-The ability to give praise or, when warranted, constructive criticism is something maintainers should have.
-
-This does not mean they have to be a perfect mesh for everyone's personalities or someone who is always nice 100% of the time.
-But they should be able to articulate the reasons why some contributions go through and some don't when asked.
-If a person has a history of brusque behavior or, worse, name calling, then this would be a deterrent to assigning them a maintainer role.
-
-Whichever the criteria you select, it is important that you publish this process somewhere within your community's assets.
-It does not have to be incredibly detailed, but you should at least list the criteria that will be measured for granting maintainership, as well as contact information for contributors to use if they have any questions or would like to make it known they would like to be considered for a reviewer or maintainer role.
-
-Giving community members a chance to grow within a project benefits those involved.
-Clearing the path to such opportunities is a great way to keep your project healthy and thriving.
-
-== Responding to new contributors
-
-Speed is a critical factor in growing your contributor base.
-The moment a new contributor submits a pull request or draft patch, a timer starts.
-And the longer maintainers take to respond to their submission, the lower the chance that person will ever contribute to the project again.
-If you're running a young project and looking to attract lots of new contributors, there may be no higher priority than dealing with first-time contributions quickly.
-
-Minutes to hours is the target.
-
-You can understand this if you put yourself in the shoes of someone making their first contribution.
-If that person is an open source novice in general, submitting for the first time is a frightening experience, easily on a par with asking someone out on a first date.
-For as long as the response to their submission is undetermined, they're going to be in an anxious state.
-After a few days, the new contributor will start to imagine that the radio silence is a message of rejection, and (given long enough) will read rejection into any response you eventually post—or not read it at all.
-
-The experienced open source hacker who sends something into your project for the first time has a different sort of timer.
-Often, this veteran is going to be interested in your project for only a short time, so responding to their contribution before they move on to another project is critical.
-If you can catch them during the week their attention is on you, you can get them in the habit of contributing to your project in addition to the others they support.
-If you wait, re-engaging with them may be difficult.
-
-=== Two deadlines for contributions
-
-This race against time and impatience has two finish lines: the time to the project's first response to the contributor, and the time until their contribution gets accepted and merged.
-
-The first is measured in hours, the second in days to weeks.
-This time-to-acceptance matters if you want that contributor to keep contributing.
-Few people will submit a second contribution while their first one is still pending.
-
-Giving an initial response quickly is your first goal.
-Ideally, this response should include general thoughts on the submission and indicate your likely timeline for reviewing it.
-If the submission arrives at a bad timefor you—such as when you're in the middle of a major release—explain this to the contributor so they know what's going on.
-They'll be vastly more patient if they know why they need to be.footnote:[If you're the sole maintainer on the project, this may mean that you also want to post vacation notices to your main developer list.]
-
-Your next goal is to get that first pull request or patch merged as soon as possible.
-
-This is no small thing; chances are, an initial submission will need extensive work before it's acceptable.
-Consider asking the submitter to do work and revise—but know that you don't want them waiting too long for your responses to their questions and revisions.
-Speeding up the acceptance process is critical to growing your contributor base.
-
-Fortunately, there are tools for that.
-
-=== Continuous integration, continuous delivery, and speed
-
-The primary methods that software projects—both community and corporate—have been using to speed up integration of patches is continuous integration and continuous delivery (CI/CD).
-The idea behind these technologies is to automate, as much as possible, the acceptance and integration of patches and new features.
-Continuous integration involves accepting pull requests and patches as soon as they pass automated tests and a simple evaluation threshold.
-Continuous delivery involves deploying new versions of the software whenever a new, tested build is ready.
-
-Much of the focus on CI/CD has been on speeding up delivery of software to users.
-But these technologies can also be very helpful for providing contributors with "immediate gratification" by seeing their patches get merged and go out quickly.
-This is perhaps their most valuable aspect, as the pace of contributions is often determined by the pace of acceptance.
-If you accept faster, then you usually get new code faster.
-
-However, implementing CI/CD can be difficult for project leaders, because their automated testing isn't comprehensive, their builds aren't fully automated, and the consequences of letting a major bug get merged into the code can be very severe.
-Despite a good deal of lip service to the values and desirability of having a continuous code pipeline, irregular batch committer review is generally the reality, especially for smaller projects.
-Additionally, CI/CD software like Gerrit, Jenkins, and Travis can be difficult to set up in a way that supports projects' real releases.
-
-There is, however, one area where CI/CD is easier to implement—and most projects should be doing it right now.
-
-=== Automating documentation contributions
-
-Documentation is one area in which most open source projects sorely need more contributions, and where acceptance of imperfect submissions carries relatively low risk.
-If your project is like most, you have a long list of things with obsolete or non-existent documentation, few documentation contributors, and little time for documentation review.
-And unless you have a large, mature, and heavily cross-referenced documentation set, the problems caused by accepting documentation errors are smaller than those caused by not having documentation on certain features at all.
-
-This means that, for most projects, self-serve CI/CD for documentation would be a real benefit.
-This is the reason why many projects adopt wikis for their documentation, since those allow for immediate editing and display.
-However, wikis make structuring documentation, rendering it in formats other than screen, or tying it to specific release versions difficult.
-For these reasons (and others), some projects have transitioned to building docs using CI/CD in DocBook, Sphinx, or AsciiDoc.
-
-== Mentoring new contributors
-
-Part of starting, or growing, a successful open source community is designing the community to be sustainable.
-This means the project needs to be able to reliably, and repeatedly, bring in new people and help them become ongoing contributors.
-Let's talk about how mentoring new contributors is crucial to enabling a community to be sustainable.
-
-If this matches your projects's version of sustainable, then a mentoring program is absolutely crucial.
-It's at the center of how to take a project from "three people who know and do everything" to make it something many people can contribute to in a self-sustaining fashion.
-
-Self-sustainability is an important focus for a mentoring program.
-And don't think I went from "mentoring people" to "a mentoring program" by accident.
-Here's the argument:
-
-1. If we can agree that lowering the barriers for entry into a project is key to bringing in new people; and
-2. If we can agree that people coming into a new project benefit from having one or more people they feel permitted and even encouraged to ask questions and learn from; and
-3. If we can agree new people having lackluster or negative interactions with existing project members is likely to drive the new people away; and
-4. If we can agree that having a person (mentor, friend) for new people to turn to is a way to prevent the driving-away and especially prevent silent segfaults (people just disappearing with no explanation);
-5. Then we can see that doing mentoring with even a tiny bit of repeatable process support is going to yield better, more satisfying results than an ad-hoc process.
-
-Once you agree that an even a lightweight program is better than an ad-hoc process, we're going in the right direction.
-With this in mind, here are a few absolute must-have elements to include in your mentoring program.
-
-=== Written, iterative process
-
-Even if it's lightweight, write it down and give it an initial try.
-
-For that first e.g. six months, get a handful of volunteers to try out the program.
-This gives time to work out the kinks in processes, and to attract more mentors for when you make the program more prominent.
-
-When you have a process you have tried and tested once or twice, put up a "Mentoring" section on your project website and include links to all the elements of your mentoring program.
-
-Make sure people who have even the slightest inkling of getting involved in the project can look ahead and see how they are going to be taken care of as a new contributor.
-
-After each full mentoring period (refer to time commitment, below), conduct a retrospective to learn from the mentoring period and improve the process iteratively.
-
-It's not just promising there will be a map and directions, it is showing the actual map and idea of what the directions will be.
-
-=== Mentoring guidelines and a Code of Conduct for your mentors
-
-Even people who are very experienced at mentoring benefit from having guidelines for how to mentor and work with mentoring subjects (mentees), mentoring ethics, and so forth.
-
-I'm excited about this project I learned about recently, https://www.mentorship.guide/[an upstream guide to mentoring itself].You can use materials such as from that project to create the elements your mentoring program needs.
-
-Mentors have a special role of trust—the project trusts them to represent the community, and the mentees (mentoring subjects) trust the mentor to lead them down the right path.
-Mentors need to conduct themselves with an appropriate standard, and there needs to be a way to keep them accountable to that standard and report problems or abuses of conduct by mentors.
-Such a Code of Conduct needs to be visible up front and prominent for everyone looking at your mentoring program.
-
-Not having a Code of Conduct for your mentors, or making it hard to find, is a warning signal to potential new contributors that this project should be avoided.
-
-=== Mentors make mentors
-
-I've been thinking about this one a lot since https://events19.linuxfoundation.org/events/open-source-summit-europe-2019/program/schedule/[I gave a talk about it at Open Source Summit Europe in October].
-
-The key idea is that new mentors are made of people who have had positive mentoring experiences that also taught them "how to be a mentor."
-Your mentors should be thinking overall and in specific instances, How can I help this person be successful at mentoring other contributors?
-
-A new contributor who is mentored well can immediately turn around and offer similar mentoring lessons to other contributors, new and existing alike.
-
-Even if you are just answering a question for a new contributor, how you answer that question is where mentoring comes in.
-You can answer in such a way that this new contributor feels empowered to share their new-found knowledge.
-If they take in the lesson of not just what was conveyed but how it was conveyed, they carry this simple lesson of mentoring forward with their own interactions across the project.
-
-=== Easy norms for mentees
-
-Unlike your mentors, you want the fewest demands and lightest burdens for your mentees.
-
-This is information that should be prominent on your mentoring program webpages, and can cover:
-
-* In our project, here is how to find and/or approach a mentor.
-* What the work/effort commitment for a mentee is likely to be.
-* Clarify the relationship, e.g., a mentor is specifically not a friendship role; the mentoring may be time-bound (six months, etc.) or otherwise have a box once left means the mentoring has concluded; mentors are volunteers and deserve equal respect; mentors are held to a Code of Conduct that mentees should know and follow as well. And so forth.
-* What does a normal mentor/mentee relationship look like in this specific project.
-
-You are looking for a balance where mentees know what is expected of them, while leaving space for the mentor to help grow that understanding of project norms, from technical to cultural.
-
-=== Named person or group who leads the mentoring program
-
-For everything from people being stuck through to disappearing mentors to Code of Conduct violations, there needs to be a clear and obvious person or persons to contact.
-
-This contact information and its purpose should be prominent on your mentoring program webpages.
-
-This group will be one of the rare areas of your project that maintains privacy and a well-understood barrier to transparency for specific topics.
-Mentors need to be able to talk with other mentors to seek guidance; this group can provide that private space.
-It can also help with any sensitive matters that arise.
-
-The governance for this group or role needs to have a clear and short escalation path to the highest levels of project leadership.
-
-=== A reasonable time and effort commitment plan for mentors
-
-Mentoring relationships can last years or be completed in a weekend.
-Make a reasonable schedule, perhaps one that is tied to your release schedule or other rhythms such as specific conferences or events you organize around.
-
-In my experience so far, the six-month commitment seemed to work well.
-It was enough time to get to know each other, talk through how I can help as a mentor/be helped as a mentee, and then some months in the middle for the mentees to actually get feedback on real activities.
-
-Especially if you are starting out, you want to attract mentors.
-If there is too long of a time and effort commitment, or if there is not clear closure to a round of mentoring, many potential mentors will not join or even inquire further about your program.
-
-Making the time and effort commitment nebulous is like sprinkling mentoring repellant on your project.
-Be clear on what participants are getting into, and your mentoring program can be on a path to success.
-
-== Mentoring new community managers
-
-In the early days of open source, projects did not have community managers.
-Collaboration among developers was a given, and if you were lucky, some people in your community enjoyed tasks other than software development, like tending to infrastructure, organizing events, or leading a marketing team.
-As open source has matured, there are many more projects created from within large companies, and these things are no longer a given.
-Increasingly, people inside those companies are designated the Community Manager or Community Architect, and are tasked with ensuring that projects run well as collaborative, multi-vendor efforts.
-
-Much has been written here about what a community manager may or may not do—but if one thing is certain, it is that projects evolve, and the role of community manager evolves with them.
-In the life of a project, a time may come when the original community manager is moving on—to a different job, a different role in the project, or just taking a back seat because of life.
- During these transition periods, a new community manager may emerge in the project.
- During this period, it can be tempting, as the outgoing community manager, to jump in and start helping the new community person come up to speed.
- The risk, however, is that you deprive the new person of an opportunity to make the role their own.
- They will certainly have a different conception of the most important jobs to be done, and a different skill set to bring to bear on the project.
-As a mentor, it is important to strike a balance between being a resource, sharing relevant history, and saying how things have been done.
-
-Recently, my colleagues and I had a discussion about mentoring new community managers.
-What is the best way for more experienced community managers successfully mentor newer community managers?
-How can you help them to be successful, allowing them the very valuable space to try new things, even if they will potentially fail along the way?
-How do you balance scoping the role, while allowing them to define the role in the way that they see fit?
-
-=== Chart the waters
-
-One of the things that is most useful when you are coming into a new role is a list of the people with whom you will be working.
-If there are stakeholders who might be able to help you, or people you will work with who have concerns about community goals, this information will enable a new person to come into the role and avoid any pitfalls or faux-pas.
-As the outgoing community manager, one of the most valuable things you can do for the new community manager is to introduce them to people who you have worked with, to smooth the transition, and ensure that they don't have to spend minutes explaining who they are and why they are turning up in places where they are not expected.
-
-=== Give room to fail
-
-A common theme among people who have had bad mentorship experiences is the omnipresent micro-manager.
-One colleague described an experience where they took on a community role from someone who was stretched too thin.
-However, everything that they did in the role resulted in email correcting them and telling them how they should have done the task differently.
-As a result, they drifted away from taking on the role.
-One question more than any can make a person in a new role feel small and inadequate: "Why didn't you just…?"
-
-A new person in any role will do things differently than the person who went before.
-There can be a few reasons for that. Maybe they don't know how to do it the way it was done in the past.
-There may be reasons which led to you doing things the way you did, but they're unaware of the history.
-It's also possible that they bring a different skill set and perspective to the role, and their way is just as valid and just as good.
-Whatever the reason, avoid asking your mentee "why didn't you…?"
-
-You have to give the new person in the role the freedom to do things differently.
-Even if they make mistakes, it is important that they feel ownership over the role.
-As a mentor, one of the hardest things is to watch someone struggle to do something which you have done in the past.
-That does not mean that you should completely abandon your new community manager.
-Instead of telling them what to do, ensure that you have good documentation for tasks they will need to do in the role, and point them at the documentation.
-This gives them guided experience, will show up any places where documentation is lacking, and will also give them the freedom to tweak things along the way.
-
-=== Help them with visibility
-
-Ironically for the most public-facing people in a project, people in community roles can see their careers suffer for lack of visibility.
-More than one person I spoke to has mentioned seeing colleagues have their career suffer because their management chain was unaware of the work they were doing, or did not understand its value.
-As the experienced community manager, one of the best gifts you can offer a junior community person is being a credible cheerleader for their work.
-
-New community managers can get stretched thin, or can focus their efforts on tasks that do not provide a significant impact on the community.
-As a mentor, you have an opportunity to help them channel their efforts on aspects of the role that provide value to the sponsoring company, in addition to benefiting the community.
-You may also have the ability to communicate their successes in a way that will help their management chain understand the value that they bring to the project.
-
-=== Get started
-
-Guiding a new community manager through their first few months on the job can be a very rewarding experience.
-As the experienced person, you can help them be effective and successful, give them confidence in their ability to execute in a new role, and increase the amount of community knowledge in your company and in the industry.
-
-What would the first 30 days of a mentorship program look like? You might try to:
-
-* Maintain a weekly one-on-one call so that they can ask you for advice and help as they feel the need
-* Organize introduction meetings with five stakeholders across different functional areas of the project, to help them chart the waters of the project
-* Identify three recurring tasks they will take over, and arm them with documentation on how you managed the activity
-* Help them identify two high-value, high-visibility projects to deliver in their first month, and communicate their work when they are delivered
-
-Beyond the first month, you should be fading increasingly into the shadows, moving your one-on-one calls to every two weeks, and providing guidance on-demand only.
-
-If you have done your job well, your mentee will be well on their way to making the job their own. 
+== Resources
